--- a/guide.html
+++ b/guide.html
@@ -152,7 +152,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108920">Void Tendrils</a></strong>
-              <p>Roots adds in place — useful for Council add spawns and Lei Shen's Diffusion Chain adds.</p>
+              <p>Roots adds in place — useful for Council add spawns and Lei Shen's <a href="https://www.wowhead.com/mop-classic/spell=135991">Diffusion Chain</a> adds.</p>
             </div>
           </div>
 
@@ -357,9 +357,9 @@
           <div class="boss-accordion-body active" data-boss-body="jinrokh">
             <ul class="boss-tips">
               <li>Prepot <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 15s and hold your cooldowns.</li>
-              <li>With Bloodlust and Fluidity, use your CDs and 2nd <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a>. RNG <a href="https://www.wowhead.com/mop-classic/item=95954">Unerring Vision of Lei Shen</a> procs.</li>
-              <li>After you clear Ionization, get back into the Fluidity pool quickly and reapply DoTs.</li>
-              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during Lightning Storm.</li>
+              <li>With <a href="https://www.wowhead.com/mop-classic/spell=2825">Bloodlust</a> and <a href="https://www.wowhead.com/mop-classic/spell=138002">Fluidity</a>, use your CDs and 2nd <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a>. RNG <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> procs.</li>
+              <li>After you clear <a href="https://www.wowhead.com/mop-classic/spell=138732">Ionization</a>, get back into the <a href="https://www.wowhead.com/mop-classic/spell=138002">Fluidity</a> pool quickly and reapply DoTs.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during <a href="https://www.wowhead.com/mop-classic/spell=137313">Lightning Storm</a>.</li>
             </ul>
             <p class="boss-rules">No rules.</p>
           </div>
@@ -373,9 +373,9 @@
           <div class="boss-accordion-body" data-boss-body="horridon">
             <ul class="boss-tips">
               <li>Apply <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> to small adds. Keep <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on marked elite adds.</li>
-              <li>Double DoT the Direhorn Spirit to benefit from the Tier 15 Shadow Priest 2P bonus.</li>
+              <li>Double DoT the Direhorn Spirit to benefit from the <a href="https://www.wowhead.com/mop-classic/spell=138156">Tier 15 Shadow Priest 2P bonus</a>.</li>
               <li>Spend <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> on Horridon.</li>
-              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during high Bestial Cry stacks.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during high <a href="https://www.wowhead.com/mop-classic/spell=136817">Bestial Cry</a> stacks.</li>
             </ul>
             <p class="boss-rules">Horridon is removed from Damage All Star Points.</p>
           </div>
@@ -390,7 +390,7 @@
             <ul class="boss-tips">
               <li>Stack in melee so you can hit multiple targets with <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on cooldown.</li>
               <li>Keep DoTs rolling on all bosses and fill with <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a>.</li>
-              <li>Recast DoTs when <a href="https://www.wowhead.com/mop-classic/item=95954">Unerring Vision of Lei Shen</a> procs.</li>
+              <li>Recast DoTs when <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> procs.</li>
             </ul>
             <p class="boss-rules">Damage done to Living Sand is removed.</p>
           </div>
@@ -406,11 +406,11 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="tortos">
             <ul class="boss-tips">
-              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on adds to trigger <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> and generate Shadow Orbs.</li>
+              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on adds to trigger <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> and generate <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
               <li>Maintain <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> on a Humming Crystal for the shield.</li>
               <li>Stay spread to reduce the chance of being knocked up by the Whirl Turtles.</li>
             </ul>
-            <p class="boss-rules">Damage done to Humming Crystal is removed. Heroic: Damage done to Vampiric Cave Bat is removed. Only damage done to Whirl Turtles that cast Shell Concussion counts.</p>
+            <p class="boss-rules">Damage done to Humming Crystal is removed. Heroic: Damage done to Vampiric Cave Bat is removed. Only damage done to Whirl Turtles that cast <a href="https://www.wowhead.com/mop-classic/spell=134092">Shell Concussion</a> counts.</p>
           </div>
         </div>
         <div class="boss-accordion">
@@ -422,7 +422,7 @@
           <div class="boss-accordion-body" data-boss-body="megaera">
             <ul class="boss-tips">
               <li>Ignore the Venomous Head.</li>
-              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on Nether Wyrms to generate Shadow Orbs.</li>
+              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on Nether Wyrms to generate <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
               <li>Swap to <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> if your raid needs extra healing throughput.</li>
             </ul>
             <p class="boss-rules">Damage done to heads that don't die is removed. 25m Heroic: Damage done to Nether Wyrm is removed.</p>
@@ -436,9 +436,9 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="jikun">
             <ul class="boss-tips">
-              <li>Use feather charges to intercept Feed Young and gain Primal Nutriment.</li>
+              <li>Use feather charges to intercept <a href="https://www.wowhead.com/mop-classic/spell=137528">Feed Young</a> and gain <a href="https://www.wowhead.com/mop-classic/spell=140741">Primal Nutriment</a>.</li>
               <li>Cast DoTs on the Nest Guardian. Use <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on Hatchlings.</li>
-              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during Quills if raid is low.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during <a href="https://www.wowhead.com/mop-classic/spell=134380">Quills</a> if raid is low.</li>
             </ul>
             <p class="boss-rules">Ji-Kun is removed from Damage All Star Points.</p>
           </div>
@@ -454,7 +454,7 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="durumu">
             <ul class="boss-tips">
-              <li>Snipe Crimson Fog adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> for <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> uptime and Shadow Orbs.</li>
+              <li>Snipe Crimson Fog adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> for <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> uptime and <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
               <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and DoTs on the Ice Walls.</li>
             </ul>
             <p class="boss-rules">Damage done to Wandering Eye is removed.</p>
@@ -503,7 +503,7 @@
             <ul class="boss-tips">
               <li>Recast DoTs on Iron Qon during mount transitions (Ro'shak → Quet'zal → Dam'ren).</li>
               <li>Hold your 2nd cooldowns and <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> for the final phase, when all four targets are active.</li>
-              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during Fist Smash if raid is low.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during <a href="https://www.wowhead.com/mop-classic/spell=136147">Fist Smash</a> if raid is low.</li>
             </ul>
             <p class="boss-rules">Damage done to Ice Tomb is removed.</p>
           </div>
@@ -517,8 +517,8 @@
           <div class="boss-accordion-body" data-boss-body="consorts">
             <ul class="boss-tips">
               <li>Precast <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on Suen then <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> before she vanishes.</li>
-              <li>Refresh DoTs on Suen during Tears of the Sun.</li>
-              <li>During Nuclear Inferno (boss immune), focus on off-healing. Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> when Blazing Radiance stacks get high.</li>
+              <li>Refresh DoTs on Suen during <a href="https://www.wowhead.com/mop-classic/spell=137405">Tears of the Sun</a>.</li>
+              <li>During <a href="https://www.wowhead.com/mop-classic/spell=137491">Nuclear Inferno</a> (boss immune), focus on off-healing. Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> when <a href="https://www.wowhead.com/mop-classic/spell=139412">Blazing Radiance</a> stacks get high.</li>
             </ul>
             <p class="boss-rules">Damage done to Lurker in the Night is removed.</p>
           </div>
@@ -531,9 +531,9 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="leishen">
             <ul class="boss-tips">
-              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> to handle Ball Lightnings.</li>
-              <li>Snipe low adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to generate Shadow Orbs.</li>
-              <li>Save your CDs and 2nd <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> for Bloodlust.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> to handle <a href="https://www.wowhead.com/mop-classic/spell=136543">Ball Lightnings</a>.</li>
+              <li>Snipe low adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to generate <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
+              <li>Save your CDs and 2nd <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> for <a href="https://www.wowhead.com/mop-classic/spell=2825">Bloodlust</a>.</li>
             </ul>
             <p class="boss-rules">Damage done to Unharnessed Power, Lesser Diffused Lightning, Greater Diffused Lightning, and Diffused Lightning is removed.</p>
           </div>
@@ -546,8 +546,8 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="raden">
             <ul class="boss-tips">
-              <li>DoT the Crackling Stalker, then burst it with <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>.</li>
-              <li>Snipe the first Essence of Anima with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>. Burn the remaining ones with <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a>.</li>
+              <li>DoT the <a href="https://www.wowhead.com/mop-classic/spell=138339">Crackling Stalker</a>, then burst it with <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>.</li>
+              <li>Snipe the first <a href="https://www.wowhead.com/mop-classic/spell=138323">Essence of Anima</a> with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>. Burn the remaining ones with <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a>.</li>
               <li>Sub 40%, use <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on cooldown to help with the HPS check.</li>
             </ul>
             <p class="boss-rules">Damage done to Sanguine Horror, Corrupted Anima, Corrupted Vita, and Essence of Vita is removed.</p>
