--- a/guide.html
+++ b/guide.html
@@ -346,6 +346,9 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
           T15 Tips
         </h2>
+        <div class="boss-expand-bar">
+          <button class="boss-expand-btn" id="bossExpandAll">Expand All ▾</button>
+        </div>
         <!-- Last Stand of the Zandalari -->
         <h3 class="boss-wing-label">Last Stand of the Zandalari</h3>
         <div class="boss-accordion">
@@ -582,6 +585,19 @@
         body.classList.toggle('active', !isOpen);
       });
     });
+
+    var expandBtn = document.getElementById('bossExpandAll');
+    if (expandBtn) {
+      expandBtn.addEventListener('click', function() {
+        var headers = document.querySelectorAll('.boss-accordion-header');
+        var allOpen = Array.prototype.every.call(headers, function(h) { return h.classList.contains('active'); });
+        headers.forEach(function(h) {
+          h.classList.toggle('active', !allOpen);
+          h.nextElementSibling.classList.toggle('active', !allOpen);
+        });
+        expandBtn.textContent = allOpen ? 'Expand All \u25BE' : 'Collapse All \u25B4';
+      });
+    }
   </script>
 </body>
 </html>
