--- a/guide.html
+++ b/guide.html
@@ -521,7 +521,8 @@
             <ul class="boss-tips">
               <li>Precast <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on Suen then <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> before she vanishes.</li>
               <li>Refresh DoTs on Suen during <a href="https://www.wowhead.com/mop-classic/spell=137405">Tears of the Sun</a>.</li>
-              <li>During <a href="https://www.wowhead.com/mop-classic/spell=137491">Nuclear Inferno</a> (boss immune), focus on off-healing. Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> when <a href="https://www.wowhead.com/mop-classic/spell=139412">Blazing Radiance</a> stacks get high.</li>
+              <li>During <a href="https://www.wowhead.com/mop-classic/spell=137491">Nuclear Inferno</a> (boss immune), focus on off-healing.</li>
+              <li> Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> when <a href="https://www.wowhead.com/mop-classic/spell=139412">Blazing Radiance</a> stacks get high.</li>
             </ul>
             <p class="boss-rules">Damage done to Lurker in the Night is removed.</p>
           </div>
