--- a/guide.html
+++ b/guide.html
@@ -376,7 +376,7 @@
           <div class="boss-accordion-body" data-boss-body="horridon">
             <ul class="boss-tips">
               <li>Apply <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> to small adds. Keep <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on marked elite adds.</li>
-              <li>Double DoT the Direhorn Spirit to benefit from the <a href="https://www.wowhead.com/mop-classic/spell=138156">Tier 15 Shadow Priest 2P bonus</a>.</li>
+              <li>Double DoT the <a href="https://www.wowhead.com/mop-classic/npc=70688">Direhorn Spirit</a> to benefit from the <a href="https://www.wowhead.com/mop-classic/spell=138156">Tier 15 Shadow Priest 2P bonus</a>.</li>
               <li>Spend <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> on Horridon.</li>
               <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during high <a href="https://www.wowhead.com/mop-classic/spell=136817">Bestial Cry</a> stacks.</li>
             </ul>
@@ -410,8 +410,8 @@
           <div class="boss-accordion-body" data-boss-body="tortos">
             <ul class="boss-tips">
               <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on adds to trigger <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> and generate <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
-              <li>Maintain <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> on a Humming Crystal for the shield.</li>
-              <li>Stay spread to reduce the chance of being knocked up by the Whirl Turtles.</li>
+              <li>Maintain <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> on a <a href="https://www.wowhead.com/mop-classic/npc=69639">Humming Crystal</a> for the shield.</li>
+              <li>Stay spread to reduce the chance of being knocked up by the <a href="https://www.wowhead.com/mop-classic/npc=67966">Whirl Turtles</a>.</li>
             </ul>
             <p class="boss-rules">Damage done to Humming Crystal is removed. Heroic: Damage done to Vampiric Cave Bat is removed. Only damage done to Whirl Turtles that cast <a href="https://www.wowhead.com/mop-classic/spell=134092">Shell Concussion</a> counts.</p>
           </div>
@@ -424,8 +424,8 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="megaera">
             <ul class="boss-tips">
-              <li>Ignore the Venomous Head.</li>
-              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on Nether Wyrms to generate <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
+              <li>Ignore the <a href="https://www.wowhead.com/mop-classic/npc=70247">Venomous Head</a>.</li>
+              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on <a href="https://www.wowhead.com/mop-classic/npc=70507">Nether Wyrms</a> to generate <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
               <li>Swap to <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> if your raid needs extra healing throughput.</li>
             </ul>
             <p class="boss-rules">Damage done to heads that don't die is removed. 25m Heroic: Damage done to Nether Wyrm is removed.</p>
@@ -440,7 +440,7 @@
           <div class="boss-accordion-body" data-boss-body="jikun">
             <ul class="boss-tips">
               <li>Use feather charges to intercept <a href="https://www.wowhead.com/mop-classic/spell=137528">Feed Young</a> and gain <a href="https://www.wowhead.com/mop-classic/spell=140741">Primal Nutriment</a>.</li>
-              <li>Cast DoTs on the Nest Guardian. Use <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on Hatchlings.</li>
+              <li>Cast DoTs on the <a href="https://www.wowhead.com/mop-classic/npc=70134">Nest Guardian</a>. Use <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> otherwise.</li>
               <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during <a href="https://www.wowhead.com/mop-classic/spell=134380">Quills</a> if raid is low.</li>
             </ul>
             <p class="boss-rules">Ji-Kun is removed from Damage All Star Points.</p>
@@ -457,7 +457,7 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="durumu">
             <ul class="boss-tips">
-              <li>Snipe Crimson Fog adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> for <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> uptime and <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
+              <li>Snipe <a href="https://www.wowhead.com/mop-classic/npc=69050">Crimson Fog</a> adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> for <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> uptime and <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
               <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and DoTs on the Ice Walls.</li>
             </ul>
             <p class="boss-rules">Damage done to Wandering Eye is removed.</p>
@@ -471,7 +471,7 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="primordius">
             <ul class="boss-tips">
-              <li>Keep DoTs on all Living Fluids (unless your Warlocks know how to play Affliction).</li>
+              <li>Keep DoTs on all <a href="https://www.wowhead.com/mop-classic/npc=71199">Living Fluids</a> (unless your Warlocks know how to play Affliction).</li>
               <li>Use <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on cooldown.</li>
               <li>Adjust your camera angle to help dodge puddles and avoid unwanted debuffs.</li>
             </ul>
@@ -504,7 +504,7 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="ironqon">
             <ul class="boss-tips">
-              <li>Recast DoTs on Iron Qon during mount transitions (Ro'shak → Quet'zal → Dam'ren).</li>
+              <li>Recast DoTs on <a href="https://www.wowhead.com/mop-classic/npc=68078">Iron Qon</a> during mount transitions (<a href="https://www.wowhead.com/mop-classic/npc=68079">Ro'shak</a> → <a href="https://www.wowhead.com/mop-classic/npc=68080">Quet'zal</a> → <a href="https://www.wowhead.com/mop-classic/npc=68081">Dam'ren</a>).</li>
               <li>Hold your 2nd cooldowns and <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> for the final phase, when all four targets are active.</li>
               <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during <a href="https://www.wowhead.com/mop-classic/spell=136147">Fist Smash</a> if raid is low.</li>
             </ul>
@@ -519,8 +519,8 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="consorts">
             <ul class="boss-tips">
-              <li>Precast <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on Suen then <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> before she vanishes.</li>
-              <li>Refresh DoTs on Suen during <a href="https://www.wowhead.com/mop-classic/spell=137405">Tears of the Sun</a>.</li>
+              <li>Precast <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on <a href="https://www.wowhead.com/mop-classic/npc=68904">Suen</a> then <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> before she vanishes.</li>
+              <li>Refresh DoTs on <a href="https://www.wowhead.com/mop-classic/npc=68904">Suen</a> during <a href="https://www.wowhead.com/mop-classic/spell=137405">Tears of the Sun</a>.</li>
               <li>During <a href="https://www.wowhead.com/mop-classic/spell=137491">Nuclear Inferno</a> (boss immune), focus on off-healing.</li>
               <li> Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> when <a href="https://www.wowhead.com/mop-classic/spell=139412">Blazing Radiance</a> stacks get high.</li>
             </ul>
@@ -535,7 +535,7 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="leishen">
             <ul class="boss-tips">
-              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> to handle <a href="https://www.wowhead.com/mop-classic/spell=136543">Ball Lightnings</a>.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> to handle <a href="https://www.wowhead.com/mop-classic/npc=69232">Ball Lightnings</a>.</li>
               <li>Snipe low adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to generate <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>.</li>
               <li>Save your CDs and 2nd <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> for <a href="https://www.wowhead.com/mop-classic/spell=2825">Bloodlust</a>.</li>
             </ul>
@@ -551,7 +551,7 @@
           <div class="boss-accordion-body" data-boss-body="raden">
             <ul class="boss-tips">
               <li>DoT the <a href="https://www.wowhead.com/mop-classic/spell=138339">Crackling Stalker</a>, then burst it with <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>.</li>
-              <li>Snipe the first <a href="https://www.wowhead.com/mop-classic/spell=138323">Essence of Anima</a> with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>. Burn the remaining ones with <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a>.</li>
+              <li>Snipe the first <a href="https://www.wowhead.com/mop-classic/npc=69869">Essence of Anima</a> with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>. Burn the remaining ones with <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a>.</li>
               <li>Sub 40%, use <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on cooldown to help with the HPS check.</li>
             </ul>
             <p class="boss-rules">Damage done to Sanguine Horror, Corrupted Anima, Corrupted Vita, and Essence of Vita is removed.</p>
