--- a/guide.html
+++ b/guide.html
@@ -204,7 +204,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a></strong>
-              <p>15% damage buff when damaging targets below 35% HP. Snipe low-health adds with <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to maintain high uptime.</p>
+              <p>Snipe low-health adds with <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to maintain high uptime.</p>
             </div>
           </div>
 
@@ -221,7 +221,6 @@
             </div>
           </div>
 
-          <p class="talent-boss-note">For boss-specific talent swaps, see the <strong>T15 Tips</strong> tab.</p>
         </div>
       </div>
     </div>
