--- a/guide.html
+++ b/guide.html
@@ -152,7 +152,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108920">Void Tendrils</a></strong>
-              <p>Roots adds in place — useful for Council add spawns and Lei Shen's <a href="https://www.wowhead.com/mop-classic/spell=135991">Diffusion Chain</a> adds.</p>
+              <p>Useful for dealing with <a href="https://www.wowhead.com/mop-classic/spell=137203">Blessed Loa Spirit</a> and <a href="https://www.wowhead.com/npc=69013">Diffused Lightning</a>.</p>
             </div>
           </div>
 
@@ -217,7 +217,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a></strong>
-              <p>Strongest option if you can stay at 20+ yard range. Switch to <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on Primordius. Switch to <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on Council and Ra-den (also Megaera if healers need help).</p>
+              <p>Default at 20+ yards. <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on Primordius (target stacking). <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on Council and Ra-den (melee range). Megaera if healers need extra throughput.</p>
             </div>
           </div>
 
