--- a/guide.html
+++ b/guide.html
@@ -165,7 +165,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a></strong>
-              <p>80% movement speed on a 10 second cooldown with 3 charges. Compare against <a href="https://www.wowhead.com/spell=121536">Angelic Feather</a> from Retail.</p>
+              <p>Far stronger than in <a href="https://www.wowhead.com/spell=121536">Retail</a> — 3 charges of 80% movement speed.</p>
             </div>
           </div>
 
