--- a/guide.html
+++ b/guide.html
@@ -217,7 +217,9 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a></strong>
-              <p>Default at 20+ yards. <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on Primordius and Dark Animus. <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on Council and Ra-den (Megaera if healers need help).</p>
+              <p>Default at 20+ yards.<br>
+              <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on Primordius and Dark Animus.<br>
+              <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on Council and Ra-den (Megaera if healers need help).</p>
             </div>
           </div>
 
