--- a/guide.html
+++ b/guide.html
@@ -233,12 +233,47 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="23 4 23 10 17 10"/><path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"/></svg>
           Rotation
         </h2>
-        <ul class="guide-list">
-          <li>Placeholder — Priority: Shadow Word: Pain &gt; Vampiric Touch &gt; Mind Blast on cooldown &gt; Devouring Plague at 3 orbs &gt; Mind Flay as filler.</li>
-          <li>Placeholder — Multi-dotting is critical on 2-3+ target encounters — keep SW:P and VT on all targets.</li>
-          <li>Placeholder — Use Shadowfiend on cooldown, aligned with trinket procs when possible.</li>
-          <li>Placeholder — Mind Sear for 4+ targets; otherwise multi-dot with Mind Flay weaving.</li>
-        </ul>
+        <!-- Opener -->
+        <h3 class="rot-section-heading">Opener</h3>
+        <ol class="rot-steps">
+          <li>Prepot at 2.5 and cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> from 25 yards away</li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a></li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a></li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=26297">Berserking</a> and <a href="https://www.wowhead.com/mop-classic/spell=96228">Synapse Springs</a></li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a></li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a></li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a></li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a></li>
+          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a></li>
+        </ol>
+        <p class="rot-note">Interrupt and recast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> if <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> procs.</p>
+
+        <!-- Priority -->
+        <h3 class="rot-section-heading">Shadow Priest Spell Priority (MoP)</h3>
+        <p class="rot-goal"><strong>Core Goal:</strong> Cast <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> as much as possible — always at 3 Shadow Orbs, never fewer.</p>
+        <p class="rot-subheading">Priority Order:</p>
+        <ol class="rot-priority">
+          <li><a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> — 3 Orbs only, this is your primary damage dealer</li>
+          <li><a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> — Use on cooldown to generate Orbs</li>
+          <li><a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> — Use on cooldown to generate Orbs</li>
+          <li><a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> — Cast after Devouring Plague (empowered filler)</li>
+          <li><a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> / <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> — Keep DoTs active</li>
+          <li><a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — Only with a <a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a> proc (if talented)</li>
+          <li><a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> — Use on cooldown at 20+ yards</li>
+          <li><a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> — Standard filler</li>
+        </ol>
+
+        <!-- DoT rule -->
+        <div class="rot-rule">
+          <strong>DoT Management Rule:</strong><br>
+          ✅ Before casting <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>, make sure <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> both have at least 8 seconds remaining — so you won't need to interrupt <a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> to refresh them mid-channel.
+        </div>
+
+        <!-- The Loop -->
+        <div class="rot-loop">
+          <strong>The Loop in Simple Terms:</strong><br>
+          Keep DoTs up → Spam <a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> &amp; <a href="https://www.wowhead.com/mop-classic/spell=32379">SWD</a> on CD to build Orbs → Dump at 3 Orbs with <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> → Repeat
+        </div>
       </div>
     </div>
 
