--- a/guide.html
+++ b/guide.html
@@ -249,8 +249,7 @@
         <p class="rot-note">Interrupt and recast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> if <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> procs.</p>
 
         <!-- Priority -->
-        <h3 class="rot-section-heading">Shadow Priest Spell Priority (MoP)</h3>
-        <p class="rot-goal"><strong>Core Goal:</strong> Cast <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> as much as possible — always at 3 Shadow Orbs, never fewer.</p>
+        <h3 class="rot-section-heading">Spell Priority</h3>
         <p class="rot-subheading">Priority Order:</p>
         <ol class="rot-priority">
           <li><a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> — 3 Orbs only, this is your primary damage dealer</li>
@@ -269,11 +268,6 @@
           ✅ Before casting <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>, make sure <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> both have at least 8 seconds remaining — so you won't need to interrupt <a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> to refresh them mid-channel.
         </div>
 
-        <!-- The Loop -->
-        <div class="rot-loop">
-          <strong>The Loop in Simple Terms:</strong><br>
-          Keep DoTs up → Spam <a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> &amp; <a href="https://www.wowhead.com/mop-classic/spell=32379">SWD</a> on CD to build Orbs → Dump at 3 Orbs with <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> → Repeat
-        </div>
       </div>
     </div>
 
