--- a/guide.html
+++ b/guide.html
@@ -264,8 +264,7 @@
 
         <!-- DoT rule -->
         <div class="rot-rule">
-          <strong>DoT Management Rule:</strong><br>
-          ✅ Before casting <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>, make sure <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> both have at least 8 seconds remaining — so you won't need to interrupt <a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> to refresh them mid-channel.
+          ✅ Before casting <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>, make sure <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> both have at least 8 seconds remaining — so you won't need to interrupt <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> to refresh them.
         </div>
 
       </div>
