--- a/guide.html
+++ b/guide.html
@@ -250,16 +250,40 @@
 
         <!-- Priority -->
         <h3 class="rot-section-heading">Spell Priority</h3>
-        <p class="rot-subheading">Priority Order:</p>
+        <p class="rot-subheading">Priority Order (highest → lowest):</p>
         <ol class="rot-priority">
-          <li><a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> — 3 Orbs only, this is your primary damage dealer</li>
-          <li><a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> — Use on cooldown to generate Orbs</li>
-          <li><a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> — Use on cooldown to generate Orbs</li>
-          <li><a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> — Cast after Devouring Plague (empowered filler)</li>
-          <li><a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> / <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> — Keep DoTs active</li>
-          <li><a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — Only with a <a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a> proc (if talented)</li>
-          <li><a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> — Use on cooldown at 20+ yards</li>
-          <li><a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> — Standard filler</li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> — 3 Orbs only.
+            <p class="rot-priority-desc">Your primary damage spender and nuke. Never let orbs cap — use it the moment you hit 3.</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> — Use on cooldown.
+            <p class="rot-priority-desc">Main orb generator and strong damage. Watch for <a href="https://www.wowhead.com/mop-classic/spell=109175">Divine Insight</a> procs (instant, free cast).</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> — Use on cooldown only if target ≤20% health.
+            <p class="rot-priority-desc">Generates 1 orb and is a strong execute. Can often double-cast in execute phase.</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> / <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> — Keep 100% uptime.
+            <p class="rot-priority-desc">Refresh just before they fall off — do not clip early, it's inefficient. Huge DPS loss if they drop.</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — Only with a <a href="https://www.wowhead.com/mop-classic/spell=87160">Surge of Darkness</a> proc (<a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a>).
+            <p class="rot-priority-desc">Instant cast, high damage, does not consume your DoTs. Use immediately when it procs.</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> (or <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> / <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> depending on talent choice) — Use on cooldown with proper positioning.
+            <p class="rot-priority-desc">Halo = 20–25+ yards away.</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> — Cast while <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> is active (empowered filler).
+            <p class="rot-priority-desc">Via <a href="https://www.wowhead.com/mop-classic/spell=137247">Solace and Insanity</a> talent: Mind Flay becomes Mind Flay: Insanity and deals significantly more damage (+33% per orb spent on your last DP). Finish the channel after casting DP unless a higher priority comes up.</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> — Standard filler.
+            <p class="rot-priority-desc">Channel when nothing else is available (usually 2–3 ticks; interrupt early only for higher priorities).</p>
+          </li>
         </ol>
 
         <!-- DoT rule -->
